--- a/arbol.css
+++ b/arbol.css
@@ -1,73 +1,70 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    background-color: #666;
-    height: 700px;
-  }
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  background-color: #666;
+  height: 700px;
+}
 
-  main {
-    margin: 0;
-    padding: 0;
-    font-family: Arial, sans-serif;
-    display: flex;
-    background-color: #666;
-    height: 700px;
-  }
-  
-  #sidebar {
-    width: 200px;
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
-    height: 800px;
-  }
-  
-  #content-container {
-    background-color: #fff;
-    flex: 1;
-    padding: 20px;
-    height: 800px;
-  }
-  
-  #content {
-  }
-  
-  nav {
-    background-color: #666;
-    padding: 10px;
-  }
-  
-  section {
-    margin-top: 20px;
-  }
-  
-  input[readonly] {
-    background-color: #ddd;
-  }
-  
-  .acciones, .datos-rama {
-    margin-top: 20px;
-  }
-  
-  button {
-    padding: 10px;
-    margin-right: 10px;
-  }
+main {
+  margin: 0;
+  padding: 0;
+  font-family: Arial, sans-serif;
+  display: flex;
+  background-color: #666;
+  height: 700px;
+}
 
-  #titulo{
-    color:white;
-    display: flex;
-    justify-content: center;
-  }
+#sidebar {
+  width: 200px;
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  height: 800px;
+}
 
+#content-container {
+  background-color: #fff;
+  flex: 1;
+  padding: 20px;
+  height: 800px;
+}
 
+#content {
+}
 
+nav {
+  background-color: #666;
+  padding: 10px;
+}
 
-  
+section {
+  margin-top: 20px;
+}
 
+input[readonly] {
+  background-color: #ddd;
+}
 
+.acciones,
+.datos-rama {
+  margin-top: 20px;
+}
 
+button {
+  padding: 10px;
+  margin-right: 10px;
+}
 
+#titulo {
+  color: white;
+  display: flex;
+  justify-content: center;
+}
 
-  
+#respuesta {
+
+  width: 150px;
+  color: red;
+
+}
